gherkin v5.1.x Automatic-Module-Name and prep for java 11